# connections-env

./: .env-metadata.json  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.prime/: .env-metadata.json
connections/: __init__.py  dataset.py  environment.py  parser.py  prompts.py  rubric.py  rulesets.py  theme_matching.py  utils.py
connections/prompts/: __init__.py  game_start.py  system.py
prompts/: nyt.md  nyt_game_start.md  nyt_system.md  puzzgrid.md  puzzgrid_game_start.md  puzzgrid_system.md
scripts/: make_prompts.py
scripts/create_dataset/: PIPELINE.md  README.template.md  step_1_fetch_grids.py  step_2_scrape_puzzles.py  step_3_clean_dataset.py  step_4_upload_to_hf.py
scripts/generate_sft_examples/: README.md  README.template.md  collate.py  compare_puzzle_ids.py  iterative_generate.py  rollout_viewer.css  rollout_viewer.html  step_1_generate.py  step_2_filter.py  step_3_prep_doctor.py  step_4_doctor.py  step_4_doctor_gameplay.py  step_4a_doctor_gameplay.py  step_4b_doctor_tokens.py  step_5_reduce_tokens.py  step_5_synthesize.py  step_6_collate_validate.py  test_concurrent.py  token_counting_utils.py  upload_to_hf.py  utils.py
training/: README.MD
training/configs/: rl.toml  sft.toml
