[project]
name = "connections"
description = "An environment based on the popular puzzle game Connections"
tags = ["puzzles", "word-games", "text", "game", "multi-turn", "eval", "train", "reasoning"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "T20"]
unfixable = ["T20"]
