[project]
name = "connections"
description = "An environment based on the popular puzzle game Connections"
tags = ["puzzles", "word-games", "text", "game", "multi-turn", "reasoning", "tool-based"]
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    "scripts"
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "T20" , "I"]
unfixable = ["T20"]

[dependency-groups]
dev = [
    "transformers>=4.57.1"
]
